--- a/css/Interface.css
+++ b/css/Interface.css
@@ -39,15 +39,18 @@ body {
 	min-width: 1040px;
 	min-height: 100%;
 }
+
 body {
 	overflow-y: hidden;
 	overflow-x: auto;
 	margin: 0;
 	padding: 0;
 }
+
 .pcr-app:not(.visible) {
 	display: none;
 }
+
 .navbar {
 	box-sizing: border-box;
 	transition: all 0.4s ease-out;
@@ -55,24 +58,29 @@ body {
 	background-color: var(--bgColor);
 	padding: 0.5em;
 }
+
 #minimizeMenu {
 	position: absolute;
 	right: 5px;
 	transition: all 0.4s ease-out;
 	cursor: pointer;
 }
+
 .zoomGroup {
 	position: absolute;
 	left: 0px;
 	bottom: 0px;
 }
+
 .zoomGroup:hover,
-.pianoCanvas:hover ~ .zoomGroup {
+.pianoCanvas:hover~.zoomGroup {
 	z-index: 1055;
 }
+
 canvas {
 	z-index: -5;
 }
+
 #progressBarCanvas {
 	transition: all 0.4s ease-out;
 	background-color: var(--inputBgColor);
@@ -90,9 +98,11 @@ canvas {
 	justify-content: space-between;
 	flex-direction: row;
 }
+
 .forcedThinButton {
 	width: 60px !important;
 }
+
 .innerMenuDivsContainer {
 	position: relative;
 	width: 100%;
@@ -102,6 +112,7 @@ canvas {
 	pointer-events: none;
 	overflow: none;
 }
+
 .innerMenuDiv {
 	margin-top: 24px;
 	position: absolute;
@@ -123,6 +134,7 @@ canvas {
 
 	transition: all 0.25s ease-out;
 }
+
 .innerMenuDiv.hidden {
 	/* right: -30%; */
 }
@@ -130,6 +142,7 @@ canvas {
 .innerMenuContDiv:first-of-type {
 	border-top: none;
 }
+
 .innerMenuContDiv {
 	background-color: var(--innerMenuBgColor);
 	background-image: var(--navBackground);
@@ -143,18 +156,22 @@ canvas {
 
 	transition: 0.3s all ease-out;
 }
+
 .innerMenuContDiv.collapsed {
 	max-height: 2em;
 }
+
 .clickableTitle:not(.glyphicon) {
 	position: relative;
 	padding-left: 5px;
 	height: 2em;
 	box-sizing: border-box;
 }
+
 .clickableTitle:hover {
 	background-color: var(--lightInnerMenuHoverBgColor);
 }
+
 .collapserGlyphSpan {
 	font-size: 1em;
 	position: absolute !important;
@@ -162,6 +179,7 @@ canvas {
 	height: 14px;
 	right: 8px;
 }
+
 .centeredMenuDiv {
 	background-color: var(--bgColor);
 	max-height: calc(50% - 50px);
@@ -175,6 +193,7 @@ canvas {
 	border-radius: 5px;
 	transition: all 0.3s ease-out;
 }
+
 .notification {
 	background-color: var(--bgColor);
 	max-height: calc(50% - 50px);
@@ -186,7 +205,11 @@ canvas {
 	overflow-y: auto;
 	overflow-x: hidden;
 	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
+
 .highlighted {
 	animation: pulse 1.5s infinite;
 	box-shadow: 0em 0em 5px 5px rgba(0, 0, 0, 0.8);
@@ -196,22 +219,27 @@ canvas {
 	0% {
 		-webkit-box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
 	}
+
 	50% {
 		-webkit-box-shadow: 0 0 0 10px rgba(10, 141, 228, 0.4);
 	}
+
 	100% {
 		-webkit-box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
 	}
 }
+
 @keyframes pulse {
 	0% {
 		-moz-box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
 		box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
 	}
+
 	50% {
 		-moz-box-shadow: 0 0 0 10px rgba(10, 141, 228, 0.4);
 		box-shadow: 0 0 0 10px rgba(10, 141, 228, 0.4);
 	}
+
 	100% {
 		-moz-box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
 		box-shadow: 0 0 0 0 rgba(10, 141, 228, 0.4);
@@ -224,17 +252,20 @@ canvas {
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+
 .trackName {
 	width: 100%;
 	padding-top: 0.1em;
 	font-size: 0.8em;
 }
+
 .instrumentName {
 	width: 100%;
 	text-align: left;
 	font-size: 0.7em;
 	padding-left: 0.2em;
 }
+
 .divider {
 	border: 0;
 	border: 1px solid var(--buttonColor);
@@ -244,28 +275,35 @@ canvas {
 	float: left;
 	margin-right: 2px;
 }
+
 .container {
 	width: 100% !important;
 	display: flex;
 }
+
 .halfContainer {
 	width: 50% !important;
 	float: left;
 }
+
 .row {
 	width: 100%;
 	margin: 0;
 }
+
 .col {
 	justify-content: space-between !important;
 }
+
 .btn-group {
 	align-self: auto;
 }
+
 .btn-group-vertical {
 	display: flex;
 	flex-direction: column;
 }
+
 .btn {
 	position: relative;
 	box-sizing: border-box;
@@ -285,17 +323,27 @@ canvas {
 
 	transition: all 0.15s ease-out;
 
-	-ms-user-select: none; /* Internet Explorer/Edge */
+	-ms-user-select: none;
+	/* Internet Explorer/Edge */
 	user-select: none;
 }
+
+.btn.recordingControl {
+	/* Add your unique styles here */
+	margin: 0 10px;
+}
+
+
 .btn:hover:active {
 	background-color: var(--buttonActiveBgColor);
 }
+
 .btn:hover {
 	background-color: var(--buttonHoverBgColor);
 	color: var(--buttonHoverFontColor);
 	border: 1px solid var(--borderColor);
 }
+
 .btn-select-line {
 	border-bottom: 4px solid #607d8b;
 	transition: all 0.15s ease-out;
@@ -305,22 +353,27 @@ canvas {
 	width: 0%;
 	opacity: 0;
 }
+
 .btn.selected {
 	border-bottom-left-radius: 0px;
 	border-bottom-right-radius: 0px;
 }
+
 .btn.selected .btn-select-line {
 	opacity: 1;
 	width: 100%;
 }
+
 .btn-lg {
 	font-size: 1.5em;
 	margin-left: 0.2em;
 	margin-right: 0.2em;
 }
+
 .btn span {
 	font-size: 1em;
 }
+
 .pcr-button {
 	opacity: 0;
 	position: absolute;
@@ -349,15 +402,18 @@ canvas {
 	display: flex;
 	align-items: center;
 }
+
 .hidden {
 	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
 }
+
 .unhidden {
 	visibility: visible;
 	opacity: 1;
 }
+
 .fullscreen {
 	position: absolute;
 	top: 0;
@@ -365,6 +421,7 @@ canvas {
 	width: 100%;
 	height: 100%;
 }
+
 .fullscreen p {
 	color: var(--inputBgColor);
 	text-align: center;
@@ -383,9 +440,11 @@ canvas {
 .floatLeft {
 	float: left;
 }
+
 .loadingDiv {
 	text-align: left;
 }
+
 /* Loading Spinner */
 .loader,
 .loader:after {
@@ -403,6 +462,7 @@ canvas {
 	width: 10em;
 	height: 10em;
 }
+
 .loader {
 	font-size: 0.5em;
 	border-top: 1.1em solid rgba(255, 255, 255, 0.2);
@@ -415,21 +475,25 @@ canvas {
 	-webkit-animation: load8 1.1s infinite linear;
 	animation: load8 1.1s infinite linear;
 }
+
 @-webkit-keyframes load8 {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 }
+
 @keyframes load8 {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
